Fixing scrollbar width

--- a/src/scrollert.less
+++ b/src/scrollert.less
@@ -58,11 +58,6 @@
         &.scrollert-disabled
         {
             overflow: auto;
-
-            &::-webkit-scrollbar
-            {
-                width: 8px;
-            }
         }
     }
 
